--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #background{
     width: 100%;
     height:100vh;
-    background-image: url(images/background.jpg);
+    background-image: url(background.jpg);
     background-size: cover;
     background-position: center;
     
